# finepdfs

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run_finepdfs_pipeline.py  th_values.json
ablations/evaluations/: launch_evals.py  task_list.py
ablations/evaluations/tasks_txt/: tasks_ara.txt  tasks_eng.txt  tasks_fra.txt  tasks_rus.txt  tasks_zho.txt
ablations/tokenization/: tk_thom.py
ablations/training/: training_script.py
blocks/: corrupted_utils.py  loggers.py  utils.py
blocks/classification/: multi_head_moder_bert.py  tf_batching.py
blocks/extractors/: docling.py
blocks/predictor/: base_extractor.py  ocr_predictor.py
blocks/readers/: warc_reparse.py
classification/: compute_samples_per_class.py  edu_langs.txt  label_data_with_teacher.py  label_utils.py  submit_training.py  train_bert.py  train_classifier.sh
docling_code/custom_code/: text_doc_serializer.py
docling_code/custom_code/backend/: pymupdf_backend.py
docling_code/custom_code/postprocessing/: cells_merge.py  list_marker_normalizer.py  page_num_tagger.py  para_merge.py
docling_code/docling/: pyproject.toml
docling_code/docling-ibm-models/: CHANGELOG.md
models/heron/: heron_int8_quant.xml
models/xgb_ocr_classifier/: xgb_classifier.ubj  xgb_metadata_model.json
pipeline_utils/: __init__.py  extract_utils.py  language.py  postprocess_utils.py  push_utils.py
postprocessing/: boilerplate.py  language.py  normalize.py  page_numbers.py  remove_image_annots.py  tables.py
thresholds/: find_th.py  gemma_classify.py  th_values.json
(+12 files in other folders)
